force-app/main/default/objects/TableauSubUser__c/TableauSubUser__c.object-meta.xml
<CustomObject>
    <label>Tableau Sub User</label>
    <nameField>
        <displayFormat>TSubUser-{0000}</displayFormat>
        <label>Tableau Sub User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tableau Sub Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>