force-app/main/default/objects/TableauSubUser__c/fields/qlook__c.field-meta.xml
<CustomField>
    <fullName>qlook__c</fullName>
    <label>qlook</label>
    <length>8</length>
    <type>Text</type>
</CustomField>