force-app/main/default/objects/TableauSubUser__c/fields/TableauUser__c.field-meta.xml
<CustomField>
    <fullName>TableauUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tableau_User</label>
    <referenceTo>TableauUser__c</referenceTo>
    <relationshipLabel>Tableau Sub Users</relationshipLabel>
    <relationshipName>Tableau_Sub_Users</relationshipName>
    <type>Lookup</type>
</CustomField>