force-app/main/default/objects/TableauSubUser__c/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <formula>RoleIds__r.RoleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserRoleId</label>
    <type>Text</type>
</CustomField>